--- a/online_registration_v4/styles.css
+++ b/online_registration_v4/styles.css
@@ -26,11 +26,12 @@ h1 {
 }
 
 h2 {
-    color: rgba(6,65,90)
+    color: rgb(47, 73, 83);
+    font-size: 18px;
 }
 p {
-    margin: 5px 10px;
-    padding: 0 15px 40px;
+    margin: 5px 15px;
+    padding: 5px 15px 30px;
     border-bottom: 5px solid rgba(6,65,90);
     text-align: center;
 }
