--- a/online_registration_v4/styles.css
+++ b/online_registration_v4/styles.css
@@ -9,7 +9,7 @@ body {
     background: whitesmoke;
     margin: 0 auto;
     max-width: 768px;
-    font-size: 18px;
+    font-size: .9rem;
     font-family: 'Nunito Sans', sans-serif;
 }
 .main-header {
